cluster/apps/traefik/error-pages/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages
spec:
  errors:
    status:
      - "500-599"
    query: /{status}.html
    service:
      name: error-pages
      port: 80
