cluster/apps/traefik/error-pages/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
        - name: error-pages
          image: ghcr.io/tarampampam/error-pages:2.2.0
          ports:
            - containerPort: 8080
              name: http
