cluster/apps/traefik/error-pages/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-pages
spec:
  selector:
    app: error-pages
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
